--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,12 @@
-# Dependencies
-node_modules/
-
-# Build outputs
+﻿node_modules/
 .frontend/.next/
 .backend/dist/
-
-# Environment variables
 .env*
 !.env.example
-
-# Logs
 *.log
-
-# IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
-
-# OS generated files
 Thumbs.db
 .DS_Store
-
-# Temporary files
-*.tmp
-*.temp
+"*.tmp"
+"*.temp"
