--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "next": "^13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^24.4.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
+    "@types/next": "^8.0.7",
+    "@types/node": "^24.6.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.17",
