--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/estree": "^1.0.8",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.4.2",
+    "@types/node-cron": "^3.0.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.6"
   }
